[package]
name = "rpi-pico-entry"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"

embassy-executor = { version = "0.5", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-sync = { version = "0.5", features = ["defmt"] }
embassy-rp = {version = "0.1", features =  ["defmt", "unstable-pac", "time-driver", "critical-section-impl"]}
embedded-hal-async = "1.0"

heapless = "0.8"
bincode = { version = "2.0.0-rc.3", default-features = false, features = ["derive"]}

[patch.crates-io]
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "e1435195cb90f6298b236255b5248db2706aead7" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "e1435195cb90f6298b236255b5248db2706aead7" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "e1435195cb90f6298b236255b5248db2706aead7" }

embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "e1435195cb90f6298b236255b5248db2706aead7" }
